--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@discordjs/rest": "^1.0.1",
     "discord.js": "^14.1.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.14.4",
     "nodemon": "^2.0.19"
   }
 }
